Logger/PingPong/manifests/deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pingpong-dep
  namespace: logger
spec:
  serviceName: pingpong-svc
  replicas: 1
  selector:
    matchLabels:
      app: pingpong
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      containers:
        - name: pingpong
          image: eetujukka/pingpong:1.14
        - name: pingpong-postgres
          image: postgres:18.4-alpine3.24
          volumeMounts:
            - name: pingpong-postgres-data-storage
              mountPath: /var/lib/postgresql
  volumeClaimTemplates:
    - metadata:
        name: pingpong-postgres-data-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 100Mi
