Logger/PingPong/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: logger
  name: pingpong-svc
spec:
  type: ClusterIP
  selector:
    app: pingpong
  ports:
    - port: 6789
      protocol: TCP
      targetPort: 3002
