Logger/PingPong/manifests/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  namespace: logger
  name: pingpong-strip-prefix
spec:
  stripPrefix:
    prefixes:
      - /pingpong
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pingpong-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-pingpong-strip-prefix@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: pingpong-svc
            port:
              number: 6789
